tests/snapshots/snapshot_validations__strict_origin_preflight_snapshot.snap
---
source: tests/snapshot_validations.rs
expression: snapshot
---
headers:
  - name: Access-Control-Allow-Credentials
    value: "true"
  - name: Access-Control-Allow-Headers
    value: "X-Strict,X-Trace"
  - name: Access-Control-Allow-Methods
    value: "GET,POST"
  - name: Access-Control-Allow-Origin
    value: "https://api.strict.dev"
  - name: Access-Control-Max-Age
    value: "0"
  - name: Vary
    value: Origin
